--- a/Ration1/templates/admin/products.html
+++ b/Ration1/templates/admin/products.html
@@ -15,7 +15,7 @@
                     <div class="col-xl-12">
                         <div class="input_field">
                             <label for="item">Product Name:</label>
-                            <input type="item" name="item" placeholder="Product Item name">
+                            <input type="item" name="item" placeholder="Product Item name" required>
                         </div>
                     </div>
                     <div class="col-xl-12">
