--- a/Ration1/templates/login.html
+++ b/Ration1/templates/login.html
@@ -19,13 +19,11 @@
                         {% csrf_token %}
                         <div class="form-group">
                             <label class="small mb-1" for="email">Email</label>
-                            <input class="form-control py-4" id="email" name="email" type="email" placeholder="Enter email" oninput="validateEmail()" />
-                            <span id="emailError" style="color: red;"></span>
+                            <input class="form-control py-4" id="email" name="email" type="email" placeholder="Enter email" required />
                         </div>
                         <div class="form-group">
                             <label class="small mb-1" for="password">Password</label>
-                            <input class="form-control py-4" id="password" name="password" type="password" placeholder="Enter password" oninput="validatePassword()" />
-                            <span id="passwordError" style="color: red;"></span>
+                            <input class="form-control py-4" id="password" name="password" type="password" placeholder="Enter password" required />
                         </div>
                         <div class="form-group d-flex align-items-center justify-content-between mt-4 mb-0">
                             <a class="small" href="password_reset">Forgot Password?</a>
@@ -37,5 +35,6 @@
         </div>
     </div>
 </div>
+
 
 {% endblock %}
