--- a/Ration1/templates/customer/base.html
+++ b/Ration1/templates/customer/base.html
@@ -86,7 +86,7 @@
                                 <li><a href="cardowner">Owner Details</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">Pages</a>
+                        <li><a href="#">Ration</a>
                             <ul class="header__menu__dropdown">
                                 <li><a href="products_list">products</a></li>
                                 <li><a href="view_cart">Cart</a></li>
@@ -100,7 +100,7 @@
             <div class="col-lg-3">
                 <div class="header__menu">
                     <ul>
-                        <li><a href="View_confirm_order"><i class="fa fa-shopping-bag"></i> <span id="item-count"></span></a></li>
+                        <li><a href="view_cart"><i class="fa fa-shopping-bag"></i> <span id="item-count"></span></a></li>
                     </ul>
                 </div>
             </div>
